docs: shorten comments and kdoc to plain prose across the repo